# gpu940

./: .cvsignore  AUTHORS  BUGS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  bootstrap  confgp2x  config.h  config.h.in  config.status  configure  configure.ac  gp2xenv.sh  libtool  putgp2x  runme.gpe  x86env.sh
GL/: .cvsignore  Makefile.am  Makefile.in  arrays.c  arrays.h  begend.c  begend.h  cmd.c  cmd.h  colors.c  colors.h  egl.c  fog.c  fog.h  framebuf.c  framebuf.h  gli.h  modes.c  modes.h  raster.c  raster.h  state.c  state.h  texture.c  texture.h  transfo.c  transfo.h  triangle.c  triangle.h
GL/samples/: .cvsignore  Makefile.am  Makefile.in  gpugears.c  texobj.c
console/: .cvsignore  Makefile.am  Makefile.in  console.c  console.h  font.c  psf2c
doc/: blend.txt  index.html
gl/samples/: gpugears.c
include/: Makefile  Makefile.am  Makefile.in  fixmath.h  gcc.h  gpu940.h  kernlist.h
include/GL/: Makefile.am  Makefile.in  gl.h  gl_float.h  lightnames.h  texturenames.h
lib/: .cvsignore  Makefile  Makefile.am  Makefile.in  fixmath.c  fixtrig.c  gpu940.c  input.c  input.h  kernlist.h  mm.c  mm.h  text.c
perftime/: .cvsignore  Makefile.am  Makefile.in  perftime.c  perftime.h  sample.c
sample/: .cvsignore  Makefile  Makefile.am  Makefile.in  codealone.c  deftext.tga  gimpcomp.c  gpu940_pic.c  greetz.c  never.c  pics.h  sample1.c  sample2.c  title.c
